<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp">

    <ImageView
        android:id="@+id/borders"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:src="@drawable/message_block_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/message_border" />

    <TextView
        android:id="@+id/restart_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:paddingTop="10dp"
        android:text="@string/restart_sentence"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/borders"
        app:layout_constraintStart_toStartOf="@+id/borders"
        app:layout_constraintTop_toTopOf="@+id/borders" />

    <ImageView
        android:id="@+id/restart_chapter"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/empty_button_small"
        app:layout_constraintStart_toStartOf="@+id/borders"
        app:layout_constraintEnd_toStartOf="@id/restart_chapter"
        app:layout_constraintTop_toBottomOf="@+id/restart_text"
        app:layout_constraintBottom_toTopOf="@id/close_fragment"
        android:contentDescription="@string/restart_chapter_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/chapter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/restart_chapter"
        app:layout_constraintEnd_toEndOf="@+id/restart_chapter"
        app:layout_constraintStart_toStartOf="@+id/restart_chapter"
        app:layout_constraintTop_toTopOf="@+id/restart_chapter" />

    <ImageView
        android:id="@+id/restart_story"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:src="@drawable/empty_button_small"
        app:layout_constraintEnd_toEndOf="@+id/borders"
        app:layout_constraintStart_toEndOf="@+id/restart_chapter"
        app:layout_constraintTop_toBottomOf="@+id/restart_text"
        app:layout_constraintBottom_toTopOf="@id/close_fragment"
        android:contentDescription="@string/restart_story_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/story"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/restart_story"
        app:layout_constraintEnd_toEndOf="@+id/restart_story"
        app:layout_constraintStart_toStartOf="@+id/restart_story"
        app:layout_constraintTop_toTopOf="@+id/restart_story" />

    <ImageView
        android:id="@+id/close_fragment"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:src="@drawable/empty_button"
        app:layout_constraintBottom_toBottomOf="@+id/borders"
        app:layout_constraintEnd_toEndOf="@+id/borders"
        app:layout_constraintStart_toStartOf="@+id/borders"
        app:layout_constraintTop_toBottomOf="@+id/restart_chapter"
        android:contentDescription="@string/close_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_m_good"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toBottomOf="@+id/close_fragment"
        app:layout_constraintEnd_toEndOf="@+id/close_fragment"
        app:layout_constraintStart_toStartOf="@+id/close_fragment"
        app:layout_constraintTop_toTopOf="@+id/close_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>