<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BackgroundFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/borders"
        android:src="@drawable/message_block_medium"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/message_border" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_plug"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintTop_toTopOf="@+id/borders"
        app:layout_constraintBottom_toBottomOf="@+id/borders"
        app:layout_constraintStart_toStartOf="@id/borders"
        app:layout_constraintEnd_toEndOf="@id/borders"
        />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>