<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChoiceFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/borders"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="20dp"
        android:src="@drawable/message_block_medium"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        android:contentDescription="@string/message_border" />

    <ImageView
        android:id="@+id/first_choice"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/empty_button"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/borders"
        app:layout_constraintTop_toTopOf="@+id/borders"
        android:contentDescription="@string/empty_button" />

    <TextView
        android:id="@+id/first_choice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_choice_plug"
        app:layout_constraintBottom_toBottomOf="@+id/first_choice"
        app:layout_constraintTop_toTopOf="@+id/first_choice"
        app:layout_constraintStart_toStartOf="@id/first_choice"
        app:layout_constraintEnd_toEndOf="@id/first_choice"
        android:fontFamily="sans-serif-condensed-light"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/second_choice"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/empty_button"
        app:layout_constraintBottom_toBottomOf="@+id/borders"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/borders"
        android:contentDescription="@string/empty_button" />

    <TextView
        android:id="@+id/second_choice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_choice_plug"
        app:layout_constraintBottom_toBottomOf="@+id/second_choice"
        app:layout_constraintTop_toTopOf="@+id/second_choice"
        app:layout_constraintStart_toStartOf="@id/second_choice"
        app:layout_constraintEnd_toEndOf="@id/second_choice"
        android:fontFamily="sans-serif-condensed-light"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>