<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DialogFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/main_character"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginStart="-20dp"
        android:src="@drawable/character"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/main_character" />

    <ImageView
        android:id="@+id/character"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/character"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/character" />

    <ImageView
        android:visibility="invisible"
        android:id="@+id/borders"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/dialog"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        android:contentDescription="@string/dialog" />

    <ImageView
        android:id="@+id/borders_main"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/dialog_main"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        tools:layout_editor_absoluteX="20dp"
        android:contentDescription="@string/dialog" />

    <ImageView
        android:visibility="visible"
        android:id="@+id/main_name_container"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:src="@drawable/empty_button_small"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="160dp"
        app:layout_constraintBottom_toBottomOf="@+id/borders"
        app:layout_constraintEnd_toEndOf="@+id/borders"
        app:layout_constraintTop_toTopOf="@+id/borders"
        android:contentDescription="@string/small_empty_button" />

    <TextView
        android:id="@+id/main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/name_plug"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/name_container"
        app:layout_constraintEnd_toEndOf="@+id/main_name_container"
        app:layout_constraintStart_toStartOf="@+id/main_name_container"
        app:layout_constraintTop_toTopOf="@id/name_container" />

    <ImageView
        android:visibility="invisible"
        android:id="@+id/name_container"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:src="@drawable/empty_button_small"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/borders"
        app:layout_constraintEnd_toEndOf="@+id/borders"
        app:layout_constraintTop_toTopOf="@+id/borders"
        android:contentDescription="@string/name_container" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/name_plug"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@id/name_container"
        app:layout_constraintBottom_toBottomOf="@+id/name_container"
        app:layout_constraintEnd_toEndOf="@+id/name_container"
        app:layout_constraintStart_toStartOf="@+id/name_container" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_plug"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintTop_toTopOf="@+id/borders"
        app:layout_constraintBottom_toBottomOf="@+id/borders"
        app:layout_constraintStart_toStartOf="@id/borders"
        app:layout_constraintEnd_toEndOf="@id/borders"
        />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>