<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#951331"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/activity_main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <View
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#EB0064"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ticket_container"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:src="@drawable/ticket_button"
        app:layout_constraintBottom_toBottomOf="@+id/main_header"
        app:layout_constraintEnd_toStartOf="@+id/diamond_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_header"
        android:contentDescription="@string/ticket_container" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/default_ticket_number"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/ticket_container"
        app:layout_constraintEnd_toEndOf="@id/ticket_container"
        app:layout_constraintStart_toStartOf="@id/ticket_container"
        app:layout_constraintTop_toTopOf="@id/ticket_container" />

    <ImageView
        android:id="@+id/diamond_container"
        android:src="@drawable/diamond_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_header"
        app:layout_constraintEnd_toStartOf="@id/settings_container"
        app:layout_constraintStart_toEndOf="@+id/ticket_container"
        app:layout_constraintTop_toTopOf="@+id/main_header"
        android:contentDescription="@string/diamond_container" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/default_diamond_number"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/diamond_container"
        app:layout_constraintStart_toStartOf="@id/diamond_container"
        app:layout_constraintEnd_toEndOf="@id/diamond_container"
        app:layout_constraintTop_toTopOf="@id/diamond_container" />

    <ImageView
        android:id="@+id/settings_container"
        android:src="@drawable/settings_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@id/main_header"
        app:layout_constraintTop_toTopOf="@id/main_header"
        app:layout_constraintStart_toEndOf="@id/diamond_container"
        app:layout_constraintEnd_toEndOf="@id/main_header"
        android:contentDescription="@string/settings_container" />



</androidx.constraintlayout.widget.ConstraintLayout>